--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -20,6 +20,10 @@ security:
         login_path: app_login
         check_path: app_login
 
+      logout:
+        path: app_logout
+        target: app_login
+
       # activate different ways to authenticate
       # https://symfony.com/doc/current/security.html#the-firewall
 
@@ -31,6 +35,13 @@ security:
   access_control:
     # - { path: ^/admin, roles: ROLE_ADMIN }
     # - { path: ^/profile, roles: ROLE_USER }
+
+    # - { path: ^/micro-post, roles: IS_AUTHENTICATED_FULLY }
+
+  role_hierarchy:
+    ROLE_ADMIN: [ROLE_EDITOR]
+    ROLE_EDITOR: [ROLE_COMMENTER]
+    ROLE_COMMENTER: [ROLE_USER]
 
 when@test:
   security:
